--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,27 @@
+sudo: required
+dist: trusty
 language: node_js
 node_js:
-  - "8"
-script: npm test
+  - '8'
+
+addons:
+apt:
+  sources:
+    - google-chrome
+  packages:
+    - google-chrome-stable
+    - google-chrome-beta
+
 before_install:
-  - npm install angular-cli@latest
-  - npm install
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
+before_script:
+- npm install -g angular-cli
+- npm install -g karma
+- npm install
+- ng build
+
+script:
+  - ng test --single-run
