--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,14 @@ before_install:
   - sh -e /etc/init.d/xvfb start
 
 before_script:
-- npm install -g angular-cli
-- npm install -g karma
-- npm install
-- ng build
+  - npm install -g @angular/cli
+  - npm install -g karma
+  - npm install
+  - ng build
 
+script: karma start karma.conf.js --single-run
 script:
-  - ng test --single-run
+  - npm run test:cover
+
+after_success:
+  - npm run coveralls
